Round one of fixing proportions/alignment

--- a/web/src/app/listing/component.scss
+++ b/web/src/app/listing/component.scss
@@ -90,10 +90,10 @@
   bottom: 0.5em;
 }
 .thurs {
-  right: 6.4em;
+  right: 6.2em;
 }
 .tues {
-  right: 14.65em;
+  right: 14.05em;
 }
 
 i {
