--- a/web/src/app/listing/section/component.scss
+++ b/web/src/app/listing/section/component.scss
@@ -26,7 +26,7 @@
 .section-periods {
     font-size:80%;
     display:inline-block;
-    margin-left:0em;
+    margin-right:0.5em;
     float:right;
     height:100%;
     white-space: nowrap;
@@ -38,7 +38,8 @@
 
 .period-time {
     font-size: 90%;
-    width: 6em;
+    width: 63px;
+
 }
 .period-day {
     font-weight: 400;
